tdf#75297 sw uno: override default num char style when NONE

The problem was during ODT import. When no text:style-name
is provided, or if it is an empty string, then the default
"Numbering symbols" character style remained active,
preventing the ability to round-trip a NONE char style.

I should be able to find or at least make a unit test for this.

Change-Id: Id942060abd3e024758f93f3d279ef8b561cfc5a9